--- a/flexdashboard_pavia.Rmd
+++ b/flexdashboard_pavia.Rmd
@@ -64,6 +64,7 @@ $(document).ready(function(){
   <li><a href="https://cnftstats.github.io/bcrc.html">BCRC</a></li>
   <li><a href="https://cnftstats.github.io/borgs.html">BorgsClub</a></li>
   <li><a href="https://cnftstats.github.io/chilledkongs.html">ChilledKongs</a></li>
+  <li><a href="https://cnftstats.github.io/claynation">Clay Nation</a></li>
   <li><a href="https://cnftstats.github.io/mocossi.html">Mocossi</a></li>
   <li id="currentProject"><a href="https://cnftstats.github.io/pavia.html">Pavia</a></li>
   <li><a href="https://cnftstats.github.io/spacebudz.html">SpaceBudz</a></li>
